--- a/README
+++ b/README
@@ -49,6 +49,8 @@ To display these commands:
 
 USING THE TOOL
 
+Run tool.py
+
 *** Filters ***
 
 Most of the filters are pretty self explanatory. Here are a few notes:
